Websockets mocking support (#3286)
Add support for mocking websockets, per #3031

---------

Co-authored-by: rafe <40272317+RafeArnold@users.noreply.github.com>